feat(scss): devextreme com utilizacao de variaveis e intellisense

--- a/.eslintrc
+++ b/.eslintrc
@@ -77,7 +77,7 @@
           {
             "selector": "variable",
             "modifiers": ["const"],
-            "prefix": ["x"],
+            "prefix": ["x", "_"],
             "format": ["PascalCase"]
           },
           {
